<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/toolbar_count_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:text="@string/toolbar_count_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/toolbar_count_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:text="@string/toolbar_count_points"
        app:layout_constraintStart_toEndOf="@+id/toolbar_count_question"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/toolbar_answer_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:text="@string/toolbar_answer_correct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/toolbar_answer_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:text="@string/toolbar_answer_error"
        app:layout_constraintStart_toEndOf="@+id/toolbar_answer_correct"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/toolbar_answer_passed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:text="@string/toolbar_answer_passed"
        app:layout_constraintStart_toEndOf="@+id/toolbar_answer_error"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>