<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:visibility="invisible"
            android:id="@+id/label_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/fab_continue"
            app:layout_constraintEnd_toStartOf="@+id/fab_continue"
            app:layout_constraintTop_toTopOf="@+id/fab_continue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:padding="4dp"
                android:text="@string/label_continue" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:visibility="invisible"
            android:id="@+id/fab_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/fab_random"
            app:layout_constraintStart_toStartOf="@+id/fab"
            app:layout_constraintEnd_toEndOf="@+id/fab"
            app:srcCompat="@drawable/ic_backup_restore"
            app:fabSize="mini" />

        <androidx.cardview.widget.CardView
            android:visibility="invisible"
            android:id="@+id/label_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/fab_random"
            app:layout_constraintEnd_toStartOf="@+id/fab_random"
            app:layout_constraintTop_toTopOf="@+id/fab_random">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:padding="4dp"
                android:text="@string/label_random" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:visibility="invisible"
            android:id="@+id/fab_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/fab_filters"
            app:layout_constraintStart_toStartOf="@+id/fab"
            app:layout_constraintEnd_toEndOf="@+id/fab"
            app:srcCompat="@drawable/ic_autorenew"
            app:fabSize="mini" />

        <androidx.cardview.widget.CardView
            android:visibility="invisible"
            android:id="@+id/label_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:elevation="2dp"
            app:layout_constraintTop_toTopOf="@+id/fab_filters"
            app:layout_constraintBottom_toBottomOf="@+id/fab_filters"
            app:layout_constraintEnd_toStartOf="@+id/fab_filters">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:layout_margin="4dp"
                android:text="@string/label_filters" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:visibility="invisible"
            android:id="@+id/fab_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin_mini"
            android:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/fab"
            app:layout_constraintStart_toStartOf="@+id/fab"
            app:layout_constraintEnd_toEndOf="@+id/fab"
            app:srcCompat="@drawable/ic_filter_list"
            app:fabSize="mini" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>